# bounds_test

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/workflows/: ci_tests.yml  pre-commit-update.yml
examples/: CMakeLists.txt  cartesian_plane.cpp  placeholder.cpp
include/beman/bounds_test/: bounds_test.hpp
include/beman/bounds_test/plat/: CMakeLists.txt
tests/beman/bounds_test/: CMakeLists.txt  bounds_test.tests.cpp
